--- a/src/ui/style.css
+++ b/src/ui/style.css
@@ -38,6 +38,32 @@
   :disabled {
     cursor: default;
   }
+
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: var(--color-default-300) var(--color-default-100);
+  }
+
+  *::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: var(--color-default-100);
+    border-radius: 4px;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: var(--color-default-300);
+    border-radius: 4px;
+    border: 2px solid var(--color-default-100);
+  }
+
+  *::-webkit-scrollbar-button {
+    width: 0px;
+    height: 0px;
+  }
 }
 
 @keyframes clx-sync-icon-enter {
